Improve homepage text (prevent it from overlapping nerds face

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -58,7 +58,7 @@ textarea, input { outline: none !important; }
   text-align: center;
   padding-top: 160px;
   padding-bottom: 160px;
-  background-image: asset-url('bkg.png');
+  background-image: asset-url('bkg.jpg');
   margin-top: $header-height;
   margin-bottom: 50px;
   color: white;
@@ -72,7 +72,7 @@ textarea, input { outline: none !important; }
   }
 
   #title {
-    font-size: 75px;
+    font-size: 3.8em;
     font-weight: $lato-bold;
     margin-top: 10px;
     text-shadow: 2px 2px 0px rgba(0,0,0, 0.3);
